Fixed some errors so that Main runs